# rust_os

./: .gitignore  Cargo.toml  build_and_run.sh  log.txt  mouse.pcap
bootloader/: Cargo.toml  run.sh
bootloader/.cargo/: config.toml
bootloader/src/: main.rs
kernel/: Cargo.toml  asmfunc.asm  build.rs  x86_64-os.json
kernel/.cargo/: config.toml
kernel/src/: acpi.rs  allocator.rs  apic.rs  class_driver.rs  configuration_space.rs  console.rs  cursor.rs  error.rs  font.rs  frame_buffer.rs  gdt.rs  graphics.rs  interrupts.rs  io.rs  main.rs  memory_manager.rs  paging.rs  pci.rs  usb.rs  xhc.rs
kernel/src/apic/: local_apic_id.rs
kernel/src/class_driver/: boot_protocol_buffer.rs  interrupt_in.rs  mouse.rs
kernel/src/class_driver/mouse/: driver.rs  subscribable.rs
kernel/src/configuration_space/: device.rs  msi.rs
kernel/src/configuration_space/msi/: msi_capability_register.rs
kernel/src/cursor/: shape.rs
kernel/src/io/: io_memory_accessible.rs
kernel/src/usb/: mouse.rs  xhci.rs
kernel/src/usb/xhci/: mapper.rs  mod.rs  ringbuffer.rs  trb.rs  xhci.rs  xhciregisters.rs
kernel/src/xhc/: allocator.rs  capability_register.rs  config.rs  device_context.rs  device_manager.rs  doorbell.rs  external_reg.rs  interrupter_set_register.rs  port.rs  registers_operation.rs  scratchpad_buffer_ptr.rs  scratchpad_buffers_array_ptr.rs  transfer.rs  usb_command.rs  waiting_ports.rs  xhc_registers.rs  xhc_registers_operations.rs
kernel/src/xhc/allocator/: aligned_address.rs  memory_allocatable.rs  pci_memory_allocator.rs
kernel/src/xhc/device_manager/: control_pipe.rs  (+7 more)
(+45 files in other folders)
