[package]
name = "bootloader"
version = "0.1.0"
edition = "2021"

[dependencies]
goblin = {version = "0.8.2", features = ["elf64", "elf32", "endian_fd"], default-features = false }
log = {version = "0.4.21", default-features = false}
uefi = {version = "0.16.0", features = ["exts"]}
uefi-services = "0.13.0"
